--- a/halaman-profil-bandung/assets/styles/style.css
+++ b/halaman-profil-bandung/assets/styles/style.css
@@ -1,5 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 h2,
@@ -46,7 +52,7 @@ nav a:hover {
   border-radius: 6px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 18px;
-  margin: 24px 18px;
+  margin-top: 24px;
 }
 
 .jumbotron {
@@ -66,4 +72,20 @@ nav li {
 nav {
   background-color: #00a2c6;
   padding: 6px;
+}
+
+main {
+  padding: 24px;
+  overflow: auto;
+}
+
+#content {
+  float: left;
+  width: 75%;
+}
+
+aside {
+  float: right;
+  width: 25%;
+  padding-left: 24px;
 }
